--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -193,14 +193,14 @@ Kleinere Korrekturen
 
 
 %TODO: Formatierungskonventionen
-%Zitatangaben kursiv und mit Doppelpunkt: \emph{Reich des roten Mondes:69}, das Regelbuch als \emph{Ilaris:9}.
-%\textbf{Aventurische Begriffe}, \emph{Regelwerk-Begriffe}, \textsc{Name von Zauber oder Liturgie}.
+%Zitatangaben kursiv und mit Doppelpunkt: \emph{Reich des roten Mondes:69}, das Regelbuch als \ilaris{9}.
+%\textbf{NSC}, \textbf{Aventurische Begriffe}, \emph{Regelwerk-Begriffe}, \textsc{Name von Zauber oder Liturgie}.
 
 
 \platz
 
 \credit{Organisation und Redaktion}{
-	\href{https://github.com/XaverStiensmeier/IlarisGlossaryEntries}{Xaver Stiensmeier}
+	\href{https://github.com/XaverStiensmeier}{Xaver Stiensmeier}
 }
 
 \credit{Abenteuer-Autor*innen}{
@@ -219,8 +219,8 @@ Kleinere Korrekturen
 }
 \credit{Illustrationen}{
 	\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}\\
-	Matthias Thanos\\
 	Alnus (Anton Dobsak)\\
+	Matthias Thanos\\
 	% Norman Obst\\
 	% René Dudziak\\
 	\href{https://www.zillie-zeh.de/}{Zillie Zeh}
@@ -232,14 +232,15 @@ Kleinere Korrekturen
 \credit{Satz}{
 	Matthias Ott\\
 	Lukas Ruhe\\
-	\href{https://github.com/XaverStiensmeier/IlarisGlossaryEntries}{Xaver Stiensmeier}\\
+	\href{https://github.com/XaverStiensmeier}{Xaver Stiensmeier}\\
 	
 }
 \credit{Korrektorat}{
-	% Matthias Ott\\
-	% Tilmann Kircher
+	Matthias Ott\\
+	Matthias Thanos\\
+	Tilmann Kircher\\
+	Xaver Stiensmeier
 }
-%\credit{Glossar}{\href{https://github.com/XaverStiensmeier/IlarisGlossaryEntries}{Xaver Stiensmeier}}
 \lizenz
 \inhaltsverzeichnis
 \neueseite
@@ -262,11 +263,11 @@ Das Ilaris-Regelbuch wird im folgenden mit \emph{Ilaris} und der entsprechende S
 
 \vfill
 
-\includegraphics[width=\linewidth]{offene_lizenz/rome_20}
+\includegraphics[width=\linewidth]{offene_lizenz/rome_20_3}
 
 \columnbreak
 
-Größere Kästen ermöglichen komplexere Proben z.B. solche mit Auswirkung je nach Anzahl Hoher Qualität. Ist \textit{Zusammenarbeit} (Ilaris:8) erlaubt \texticon{probe_zusammenarbeit_ja} oder nicht \texticon{probe_zusammenarbeit_nein}? Handelt es sich um eine \textit{Gruppenprobe} (Ilaris:8), wo der beste Charakter \texticon{probe_gruppenprobe_gut}, oder wo der schlechteste Charakter würfelt \texticon{probe_gruppenprobe_schlecht}, oder ist es gar keine Gruppenprobe \texticon{probe_gruppenprobe_nein}? Wird mit 3W20 \texticon{wuerfel_rot_3} oder 1W20 \texticon{wuerfel_rot_1} gewürfelt - dabei wird auch direkt die Schwierigkeit angegeben, wenn es sich um eine offene Probe handelt? Proben mit einem Detailgrad über eins \texticon{probe_detailgrad_1} (Ilaris:9) sind \textit{ausgedehnte Proben} mit Detailgrad zwei \texticon{probe_detailgrad_2}, drei \texticon{probe_detailgrad_3} oder sogar vier \texticon{probe_detailgrad_4}. Zuletzt wird noch angegeben, ob eine \textit{offene Probe} \texticon{probe_vergleichend_nein} oder eine \textit{vergleichende Probe} \texticon{probe_vergleichend_ja} gewürfelt wird (Ilaris:9). Ein Beispiel:
+Größere Kästen ermöglichen komplexere Proben z.B. solche mit Auswirkung je nach Anzahl Hoher Qualität. Ist \textit{Zusammenarbeit} (\ilaris{8}) erlaubt \texticon{probe_zusammenarbeit_ja} oder nicht \texticon{probe_zusammenarbeit_nein}? Handelt es sich um eine \textit{Gruppenprobe} (\ilaris{8}), wo der beste Charakter \texticon{probe_gruppenprobe_gut}, oder wo der schlechteste Charakter würfelt \texticon{probe_gruppenprobe_schlecht}, oder ist es gar keine Gruppenprobe \texticon{probe_gruppenprobe_nein}? Wird mit 3W20 \texticon{wuerfel_rot_3} oder 1W20 \texticon{wuerfel_rot_1} gewürfelt - dabei wird auch direkt die Schwierigkeit angegeben, wenn es sich um eine offene Probe handelt? Proben mit einem Detailgrad über eins \texticon{probe_detailgrad_1} (\ilaris{9}) sind \textit{ausgedehnte Proben} mit Detailgrad zwei \texticon{probe_detailgrad_2}, drei \texticon{probe_detailgrad_3} oder sogar vier \texticon{probe_detailgrad_4}. Zuletzt wird noch angegeben, ob eine \textit{offene Probe} \texticon{probe_vergleichend_nein} oder eine \textit{vergleichende Probe} \texticon{probe_vergleichend_ja} gewürfelt wird (\ilaris{9}). Ein Beispiel:
 
 \probenkasten[
 bild=beeinflussung,
@@ -277,9 +278,9 @@ anzahl=3,
 pw=18,
 farbe=rot
 ]{Überreden}{%
-Kannst du die Brückentrolle überreden? Wenn du dich traust 2 HQ anzusagen (Probe +8) und dir die Probe dennoch gelingt, kannst du den Troll sogar überreden, dir zu helfen.
+Kannst du die Brückentrolle überreden? Wenn du dich traust 2 HQ anzusagen (Probe -8 erschwert) und dir die Probe dennoch gelingt, kannst du den Troll sogar überreden, dir zu helfen.
 }
-
+\vfill
 \includegraphics[width=\linewidth]{offene_lizenz/owl_nb}
 
 Wir wünschen euch viel Spaß beim Spielen und freuen uns über jede Rückmeldung und Anregung!
@@ -382,8 +383,8 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über jede Rückmeldun
 \usekomafont{section}Matthias Ott\normalfont\normalcolor\normalsize
 \end{center}
 
-\credit{Illustrationen}{\href{https://www.artstation.com/bernhard\_eisner}Alnus (Anton Dobsak)\\
-	{Bernhard Eisner}\\
+\credit{Illustrationen}{\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}\\
+    Alnus (Anton Dobsak)\\
 	\href{https://www.zillie-zeh.de/}{Zillie Zeh}\\	
 	game-icons.net
 }
@@ -449,7 +450,7 @@ Die von \textbf{telling} gemachte Karte des Svelltlandes findet sich in tellings
 Mit freundlicher Genehmigung des Autors:
 
 \begin{center}
-	\includegraphics[width=\textwidth]{svellttal-0211.png}
+	\includegraphics[width=\textwidth]{svellttal}
 \end{center}
 
 \newpage
