--- a/band_02/schwarze_hand/schwarze-hand.tex
+++ b/band_02/schwarze_hand/schwarze-hand.tex
@@ -32,7 +32,7 @@ Für besonders kampfstarke Gruppen können natürlich an mehreren Stellen typisc
 „Kampfschweinen“ könnte jedoch bei den Proben auf die gesellschaftlichen Fertigkeiten Probleme bekommen.
 
 \kasten{
-Da es sich bei den Goblins und den Räubern um eine recht große Anzahl an Gegnern handelt, empfiehlt es sich, im Nahkampf nur die Spielenden aktiv würfeln zu lassen (\emph{Ilaris:9}).
+Da es sich bei den Goblins und den Räubern um eine recht große Anzahl an Gegnern handelt, empfiehlt es sich, im Nahkampf nur die Spielenden aktiv würfeln zu lassen (\ilaris{9}).
 \platz
 Sollten die Spielercharaktere den Kampf mit den Goblins gesucht und dieser viel Zeit in Anspruch gekostet haben, macht es Sinn, anstelle der Räuber nurmehr ein verlassenes Lager mit Hinweis auf die \textbf{„Schwarze Hand“} einzuführen.
 }
@@ -85,7 +85,7 @@ Brot, Käse und Bier stehen umgehend auf dem Tisch, die warme Mahlzeit muss jedo
 Die Charaktere können nach Stillen des ersten Hungers auch erst einmal ihr Gepäck auf den Dachboden bringen, wo sie auf ein paar Strohmatratzen die Nacht verbringen können.
 Die Schmiedin ist neugierig auf Nachrichten aus der Ferne, die anderen Dörfler halten aber zunächst respektvolle Distanz.
 Eine direkte Nachfrage nach dem verlassenen Hof wird aber umgehend beantwortet:
-Die Frau Junkerin ist im Jahr des Feuers beim Angriff des Alagrimm samt einzigem Sohn getötet worden, seitdem organisiert sich das Dorf als \textbf{Sendschaft} selbst und schickt Sendrin \textbf{Jette Buschanger} als Vertreterin zum jährlichen \textbf{Schwurbundfest} (mehr dazu in \emph{Die Flusslande:24/25}).
+Die Frau Junkerin ist im Jahr des Feuers beim Angriff des Alagrimm samt einzigem Sohn getötet worden, seitdem organisiert sich das Dorf als \textbf{Sendschaft} selbst und schickt Sendrin \textbf{Jette Buschanger} als Vertreterin zum jährlichen \textbf{Schwurbundfest} (mehr dazu in \emph{Die Flusslande:24,25}).
 
 
 Die Dörfler bleiben zunächst unter sich, diskutieren mit Fortschreiten des Abends aber immer lebhafter.
@@ -156,7 +156,7 @@ Die Goblins sind wachsam und rechnen durchaus mit einem Angriff durch die Charak
 
 
 
-Regeltechnisch haben die Bogenschützen die \emph{Aktion Verzögern} gewählt und würden selbst bei niedrigerer Initiative als die Charaktere sofort (natürlich mit einem Malus von -4, \textit{Ilaris:37}) schießen, während die Speerkämpfer sich in \textit{voller Verteidigung} befinden und hinter den Baumstämmen eine \emph{vorteilhafte Position} einnehmen.
+Regeltechnisch haben die Bogenschützen die \emph{Aktion Verzögern} gewählt und würden selbst bei niedrigerer Initiative als die Charaktere sofort (natürlich mit einem Malus von -4, \ilaris{37}) schießen, während die Speerkämpfer sich in \textit{voller Verteidigung} befinden und hinter den Baumstämmen eine \emph{vorteilhafte Position} einnehmen.
 
 Die Charaktere können \textbf{Sulrik} mit Klugheit austricksen oder einschüchtern:
 
