--- a/band_02/spielhilfen/encounter.tex
+++ b/band_02/spielhilfen/encounter.tex
@@ -88,7 +88,7 @@ Vielleicht kämpfen die Gegner sogar überhaupt nur, weil sie seine Befehle ausf
 Sollte der Anführer fallen oder Gefangen genommen werden, fliehen sie dementsprechend womöglich.
 Bei der Entscheidung, ob dies passend ist, kann dir vielleicht die dramatische Frage helfen.
 
-Beispiele: Söldnerkommandant (\textit{Ilaris:107}). Hummerier-Priester (s.\,u.).
+Beispiele: Söldnerkommandant (\ilaris{107}). Hummerier-Priester (s.\,u.).
 
 \unterabsatz{Artillerie}
 Die Artillerie bedeckt die SCs aus größerer Distanz oder aus schwer zu erreichender Position mit Fernkampfangriffen oder Zaubern.
@@ -105,7 +105,7 @@ Die Frontsau ist ein starker Nahkämpfer, der sowohl austeilen als auch einsteck
 Sie ist üblicherweise das naheliegenste Ziel für einen Angriff der Helden, wenn auch nicht unbedingt das taktisch klügste.
 Ignoriert man sie, bedankt sie sich mit voller Offensive, Passierschlägen oder sie zerlegt einfach nur deinen Magier.
 
-Beispiele: Kriegsoger (\textit{Ilaris:203}). Hummerier-Soldat (s.\,u.). 
+Beispiele: Kriegsoger (\ilaris{203}). Hummerier-Soldat (s.\,u.). 
 
 \zeichnung{Kämpfer.jpg}
 
@@ -113,7 +113,7 @@ Beispiele: Kriegsoger (\textit{Ilaris:203}). Hummerier-Soldat (s.\,u.).
 Der Assassine taucht bevorzugt bei einzeln stehenden, verwundbaren SCs auf.
 Dazu setzt er überlegene Mobilität und/oder Heimlichkeit ein.
 
-Beispiele: Kräftige Stallmagd, die sich spontan entscheidet, den fliehenden Gruppenmagier zu tackeln, Säbelzahntiger (\textit{Ilaris:106}).
+Beispiele: Kräftige Stallmagd, die sich spontan entscheidet, den fliehenden Gruppenmagier zu tackeln, Säbelzahntiger (\ilaris{106}).
 \unterabsatz{Angsthase}
 Der Angsthase hält sich zurück. Sein Hauptziel ist, heute Abend heil zu seiner Familie nach Hause zu kommen.
 Er macht im Kampf genug, um nicht als Verräter dazustehen, führt explizite Befehle aus, verteidigt seine Kameraden und kämpft um sein Leben, wenn er in die Enge getrieben wird.
@@ -164,7 +164,7 @@ Also \biglittlecap{Höllenpein}, \biglittlecap{Paralysis} und dergleichen mit Be
 Analog zu AT und Schaden gibt es in der Defensive die Stellschrauben VT (\textit{Verteidigung}) und \textit{Wundschwelle}.
 Auch hier macht Variation das Spiel interessanter.
 
-Die \textit{Wundschwelle} hat dabei noch detailliertere Aspekte. Erstens wäre der \textit{Rüstungsschutz} zu nennen, den man mit \textit{rüstungsbrechend}en Waffen kontern kann. Und zweitens die Kreatureneigenschaft \textit{Koloss} (\textit{Ilaris:96}). Man kann die WS halbieren und dafür eine Stufe \textit{Koloss} geben. Die Regeln lesen sich so, als würde man das nur machen, damit die WS nicht unmöglich hoch wird. Tatsächlich hat es aber einen weiteren ganz entscheidenden Effekt: Es halbiert den Schaden aus \textit{Todesstoß}. Wenn du also findest, dass \textit{Todesstoß} zu sehr dominiert, bringe öfter mal \textit{Koloss}e mit niedrigerer \textit{Wundschwelle}. Dies ist zum Beispiel passend bei Schwärmen, fettleibigen aber labbrigen Zombies oder amorphen Schleimungeheuern. 
+Die \textit{Wundschwelle} hat dabei noch detailliertere Aspekte. Erstens wäre der \textit{Rüstungsschutz} zu nennen, den man mit \textit{rüstungsbrechend}en Waffen kontern kann. Und zweitens die Kreatureneigenschaft \textit{Koloss} (\ilaris{96}). Man kann die WS halbieren und dafür eine Stufe \textit{Koloss} geben. Die Regeln lesen sich so, als würde man das nur machen, damit die WS nicht unmöglich hoch wird. Tatsächlich hat es aber einen weiteren ganz entscheidenden Effekt: Es halbiert den Schaden aus \textit{Todesstoß}. Wenn du also findest, dass \textit{Todesstoß} zu sehr dominiert, bringe öfter mal \textit{Koloss}e mit niedrigerer \textit{Wundschwelle}. Dies ist zum Beispiel passend bei Schwärmen, fettleibigen aber labbrigen Zombies oder amorphen Schleimungeheuern. 
 \neuespalte
 
 \mbox{}
@@ -240,7 +240,7 @@ Offensiv wird es wie oben beschrieben schwierig.
 Da dein Gegner im Vergleich zu der Gruppe so selten dran kommt, muss er jedes Mal wirklich was reißen. %Du kannst dies etwas auflockern, indem du als Hausregel die Aktionen des Gegners gleichmäßig über die Kampfrunde verteilst. Ein Shruuf mit Zusätzliche Attacke IV könnte Beispielsweise einmal in seiner eigenen Iniphase angreifen, und dann jeweils am Ende jeder der Iniphasen der vier Spielercharaktere. So milderst du folgende Situation etwas ab. : \enquote{Ich laufe zu dem Dämon und haue ihn. Ok, [...] du machst ihm eine Wunde. Er haut zurück. Und er haut nochmal zurück. [...] Du hast jetzt dann -16 auf VT, oder? Er haut nochmal...} Stattdessen haben mit unserer Hausregel die anderen SCs noch die Möglichkeit einzuschreiten, bevor ihr Kamerad zerschreddert ist. 
 
 
-Das Ilaris Regelwerk selbst bietet spezielle Regeln für Endgegner an (\textit{Ilaris:96}). Schwachstellen und eine Unterteilung in unterschiedliche Trefferzonen können die Entscheidung \enquote{wo haue ich drauf} wieder einführen.
+Das Ilaris Regelwerk selbst bietet spezielle Regeln für Endgegner an (\ilaris{96}). Schwachstellen und eine Unterteilung in unterschiedliche Trefferzonen können die Entscheidung \enquote{wo haue ich drauf} wieder einführen.
 Als Hausregel kann man die Idee noch etwas weiter führen und die Trefferzonen (regeltechnisch) als einzelne Gegner mit unterschiedlicher Initiative sehen.
 So könntest du einen mächtigen Drachen in Kopf (Ini 12, Zauber, Biss oder Feueratem), Flügel (Ini 8, Flügelangriff zum Zurückstoßen oder Fliegen), Schwanz (Ini 6, Schwanzschlag) und Körper (Ini 2, Laufen mit Trampelangriff) aufteilen.
 Dies verhindert, dass ein SC durch mehrere Attacken zerlegt wird, bevor auch nur ein einziger Mitspieler eine Chance hat etwas dagegen zu unternehmen, wie es vermutlich der Fall wäre, wenn der Drache 4 Aktionen auf einmal hätte.
@@ -400,7 +400,7 @@ Sollten die Hummerier auf effektiven Widerstand stoßen, ziehen sie sich vorerst
 \smallskip 
 \newline 
 \minisec{Regeln}
-Zum Erklimmen des Piers ist eine Aktion \textit{Konzentration} erforderlich. Beachte die Regeln zur Konzentration, insbesondere die Möglichkeit diese zu unterbrechen (\textit{Ilaris:37}).
+Zum Erklimmen des Piers ist eine Aktion \textit{Konzentration} erforderlich. Beachte die Regeln zur Konzentration, insbesondere die Möglichkeit diese zu unterbrechen (\ilaris{37}).
 Gelingt dies bevor der Kletterer das nächste mal am Zug ist, fällt er zurück ins Wasser. 
 
 Vom Pier aus hat man eine \textit{überlegene} Position gegen Wesen im Wasser  (+4). Um von oben ins Wasser, oder umgekehrt, angreifen zu können, benötigt man allerdings Reichweite 2. (Kletterer können von oben und unten auch mit kürzeren Waffen erreicht werden.)
@@ -426,13 +426,13 @@ Der Elementarist schickt weitere \biglittlecap{Aquasphaeri}, solange er nicht da
 \smallskip
 
 Wir empfehlen die Ablenkungstrupps nur dann detailliert nach Kampfregeln auszuspielen, wenn die SCs direkt mit diesen interagieren.
-Sonst kannst du deren Erfolg nach den Regeln des \textit{Massenkampf}s bestimmen (\textit{Ilaris:60}), oder einfach frei nach SL-Entscheid erzählen.
+Sonst kannst du deren Erfolg nach den Regeln des \textit{Massenkampf}s bestimmen (\ilaris{60}), oder einfach frei nach SL-Entscheid erzählen.
 
 
 \minisec{Regeln}
 Der Pier gibt wegen dem höheren Wasserstand nur noch \textit{vorteilhafte} Position (+2) und es benötigt nur noch eine Aktion \textit{Bewegung} diesen zu erklimmen.
 
-Der Elementarist benötigt \textit{Konzentration}, um seinen \biglittlecap{Aquasphaero} zu lenken (siehe \textit{Ilaris:139}).
+Der Elementarist benötigt \textit{Konzentration}, um seinen \biglittlecap{Aquasphaero} zu lenken (siehe \ilaris{139}).
 Er kann also auch während der Wasserball fliegt noch gestört werden.
 Beim zweiten Mal verwendet er dann allerdings eventuell die Modifikation \textit{vorgegebene Bewegung}.
 
@@ -461,7 +461,7 @@ Auch könntest du den Elementaristen ohne Leibwächter an der Seite auftreten la
 
 Sollte es sich um eine größere Stadt handeln, sind sowohl mehr Kampfkraft der Stadt als auch mehr Angreifer eventuell angemessen.
 Wie du größere Schlachten abhandelst, ist allerdings ein Thema für sich.
-Du kannst zum Beispiel nur die Aktionen der Helden detailliert ausspielen und für den Rest der Schlacht alle paar Kampfrunden eine Probe nach den \textit{Massenkampf}regeln (\textit{Ilaris:60}) ablegen. 
+Du kannst zum Beispiel nur die Aktionen der Helden detailliert ausspielen und für den Rest der Schlacht alle paar Kampfrunden eine Probe nach den \textit{Massenkampf}regeln (\ilaris{60}) ablegen. 
 
 
 Um es schwerer zu machen könnte der Elementarist einen Dschinn des Unwassers gebunden haben, der für ihn in den Kampf eingreift. 
