--- a/band_02/vorwort.tex
+++ b/band_02/vorwort.tex
@@ -10,6 +10,8 @@ Dieses Abenteuer führt erfahrene Helden tief ins Herz der Finsterkoppen, die He
 Unsere Helden müssen nicht nur ihre Kampffertigkeiten, sondern auch ihren Verstand in besonders praktischer Weise einsetzen, um das Königreich vor einer drohenden Gefahr zu bewahren.
 \subsection*{2. Platz: Die Schwarze Hand im Wen\-gen\-holmer Land (Tilmann Kircher)}
 In diesem „hotzenplotzerischen“ Abenteuer erwartet die Helden im Wengenholmer Land eine scheinbar einfache Aufgabe, die sich als schwerer als erwartet entpuppt, und deren Auflösung eine besondere Begegnung bereithält.
+
+Müssen sie wirklich \textit{nur} einen Trunkenbold finden?
 \subsection*{3. Platz: Asche im Wind\newline (Jasmin \& Benjamin Drogat)}
 Dieses durchaus komplexe Sandbox-Abenteuer entführt die Spieler in das Svelttal, wo ihnen je nach Charakter ein anderer geschickter Einstieg ins tatsächliche Abenteuer gegeben wird: Sie müssen die Ursache für die unheimlichen Entität finden, die die Bewohner des Svelltlandes heimsucht. \textit{Asche im Wind} erzählt sich vor allem durch scheinbar zufällige Begegnungen und webt damit eine starke Atmosphäre. 
 
@@ -36,7 +38,7 @@ Ein besonderer Dank gilt auch den Künstlern Bernhard Eisner, Alnus (Anton Dobsa
 Und natürlich gebührt ein riesiges Dankeschön dem Ilaris-Team, ohne das dieses Regelwerk nie das Licht der Welt erblickt hätte:
 \textbf{Lukas \enquote{Curthan} Schafzahl, Lennart Sobirey, René Dudziak} und \textbf{Julius Natrup}.
 
-Wo ich im Vorfeld viel organisatorische Arbeit hatte, kann ich mich nun, da ich diese Zeilen schreibe ziemlich zurücklehnen. Dank \textbf{Lukas Ruhe} und \textbf{Matthias Ott}, der bereits den ersten Wettbewerb organisiert und die \enquote{Chroniken von Ilaris -- Band I} herausgegeben hat, verläuft der Satz auch diesmal reibungslos. Gemeinsam – so sage ich mal ganz hochgestochen – haben wir es geschafft, den Wettbewerb auf ein neues Niveau zu heben.
+Wo ich im Vorfeld viel organisatorische Arbeit hatte, kann ich mich nun, da ich diese Zeilen schreibe ziemlich zurücklehnen. Dank \textbf{Lukas Ruhe} und \textbf{Matthias Ott}, der bereits den ersten Wettbewerb organisiert und die \enquote{Chroniken von Ilaris -- Band I} herausgegeben hat, verläuft der Satz auch diesmal größtenteils reibungslos. Gemeinsam haben wir es geschafft, den Wettbewerb auf ein neues Niveau anzuheben.
 
 Ich freue mich schon jetzt auf den nächsten Wettbewerb und bin gespannt, welche kreativen Abenteuer uns dann erwarten.
 
