--- a/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
+++ b/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
@@ -165,7 +165,11 @@ In diesem Abschnitt sind nur die zwei Schauplätze beschrieben, an denen die Han
 \kasten{Großlinge würden vielleicht von einem \emph{Hohen Rat} sprechen -- deutliches Zeichen, dass die Sonne ihnen das Haupt verbrannt hat.
 	Selbstverständlich ist es der \textbf{\emph{Tiefe} Rat}, was die \emph{tiefe} Weisheit seiner Mitglieder und Bedeutung seiner Beschlüsse anzeigt!}
 
-\vfill
+\begin{center}
+\vspace{-0.4cm}
+\includegraphics[width=0.64\linewidth]{Ingerimm_ph}
+\vspace{-0.5cm}
+\end{center}
 
 \subsubsection{Die Versammlungshalle}
 
@@ -188,14 +192,14 @@ das \fkv interpretiert diesen Einfluss auf die Ratsmitglieder als direkte Inspir
 
 \subsubsection{Der Angroschtempel}\label{angrosch}
 \vorlesen{%
-Im gesamten Tempel ist es \emph{heiß} \emph{(Ilaris:35)}, da stets mehrere Feuer und Öfen brennen.
+Im gesamten Tempel ist es \emph{heiß} (\ilaris{35}), da stets mehrere Feuer und Öfen brennen.
 Seine Grundfläche entspricht etwa der der Versammlungshalle, doch gibt es hier mehr Nischen mit \textbf{Altäre}n -- oft zugleich Werkbänke oder Ambosse.
 Die Wände sind mit Angram-Runen bedeckt, die die Geschichte der Kinder Angroschs im Allgemeinen und des \fkv im Besonderen im Lichte des Angrosch-Glaubens auslegen.\\
 Den Platz der heiligen Flamme nimmt in diesem Tempel ein sechs Spann breiter \textbf{Schlot} ein, der direkt senkrecht in das vulkanische Herz der Berge führt.
 Hier hinein werden Opfergaben und die Toten aus dem \fkv geworfen.
-Die Hitze aus der Tiefe ist in zwei Schritt Umkreis deutlich spürbar (\emph{Kh\^omglut}, \emph{Ilaris:35}).
+Die Hitze aus der Tiefe ist in zwei Schritt Umkreis deutlich spürbar (\emph{Kh\^omglut}, \ilaris{35}).
 Hier treten mehrmals pro Jahr  und in höherer Konzentration als in der Versammlungshalle Gase aus, die bei empfindlichen Zwergen und Menschen Atemnot,
-bei empfänglichen (\emph{Vorteil: Prophezeien (Ilaris:30)} zudem Visionen auslösen können.
+bei empfänglichen (\emph{Vorteil: Prophezeien (\ilaris{30})} zudem Visionen auslösen können.
 \\
 Hinter dem Schlot führen einige Stufen hinauf zum großen Altar-Amboss. Auf dessen Rückseite setzen sich die Stufen zu einer langen \textbf{Treppe} hinab in die Dunkelheit fort.
 }
@@ -428,15 +432,13 @@ erfolg={In den alten Tagen gab es noch ein zweites Verfahren der Hochkönigwahl:
 	\textbf{32:} Der Brauch wurde aufgegeben, nachdem eine fremde Gottheit einen Weg gefunden hatte, die Wahl zu unterwandern.\\
 	\textbf{36:} Es handelte sich um den \textbf{Namenlosen}, der durch seine Gläubigen etwas \textbf{Rattengold} unter die Schmiedematerialien geben ließ.\\
 }
-]{Ermittlung (Ilaris:69): Gebräuche (Zwerge)}{
+]{Ermittlung (\ilaris{69}): Gebräuche (Zwerge)}{
 Mit dieser Information kann die Gruppe eine \emph{Ermittlung} anstellen, die den  größeren Teil eines Tages in Anspruch nimmt.
 Für den nächsten Tag wird der \textbf{Tiefe Rat} erneut zusammengerufen.
 }
 
-\bigskip
-
 \begin{center}
-\bild[0.85\textwidth]{Zwergenrat.jpg}
+\bild[0.8\textwidth]{Zwergenrat.jpg}
 \end{center}
 
 \spaltenanfang
@@ -463,7 +465,7 @@ Es werden auf Nachfrage sogar unterschiedliche Gründe genannt, warum die Binge 
 \info{
 Vermutlich wird die Gruppe vorschlagen, sich um dieses Problem zu kümmern.
 Der Tiefe Rat steht dem aus Gründen der Tradition kritisch gegenüber.
-Damit ist ein Rededuell (\emph{Ilaris:55}) mit DG~2 begonnen:
+Damit ist ein Rededuell (\ilaris{55}) mit DG~2 begonnen:
 }
 \spaltenende
 
@@ -513,16 +515,12 @@ Ebenso könnte ein jüngerer Geweihter oder Tempeldiener überzeugt werden, den 
 }
 Hierbei führt der Misserfolg zu einem Betretungsverbot des Tempels (wenn auch nur für die nächsten 3x3 Jahrzehnte).
 
-\bigskip
-
 Das Schloss des goldenen Tors ist echte Zwergenarbeit und nur mit enormem Aufwand zu knacken. Dieses Tor wurde aber erst später in der Nutzungsgeschichte errichtet. 
 \probe{koerperkraft}{DG\,2 (20): Körperkraft, Mechanik}{Ein vor Jahrhunderten vermauerter, weniger repräsentativer Eingang ist hinter einem der Kohlebecken zu entdecken. Er lässt sich mit einfachem Werkzeug
 freilegen und aus den Angeln heben.
 }
 Misslingt die Probe, führen diese groben Arbeiten zu einem Steinschlag (4W6 TP für die würfelnde Figur).
-\begin{center}
-\zeichnung[0.18\textwidth]{Gruppenprobe.jpg}
-\end{center}
+\vfill
 
 \spaltenende
 
@@ -535,7 +533,7 @@ Misslingt die Probe, führen diese groben Arbeiten zu einem Steinschlag (4W6 TP 
 	
 	\textbf{Vorschläge für längeres Spiel:}
 	\begin{enumerate}
-		\item Durch die Gänge der Wühlschrate sind neben der Riesenamöbe auch \link{https://ilaris-online.de/app/kreatur/92}{Höhlenspinnen} (\emph{Ilaris:101}) und \link{https://ilaris-online.de/app/kreatur/81}{Gruftasseln} eingedrungen.
+		\item Durch die Gänge der Wühlschrate sind neben der Riesenamöbe auch \link{https://ilaris-online.de/app/kreatur/92}{Höhlenspinnen} (\ilaris{101}) und \link{https://ilaris-online.de/app/kreatur/81}{Gruftasseln} eingedrungen.
 		\item Der Bosnickel hat Lust auf Gesellschaft und einen zünftigen Rätselwettstreit und erzählt erst danach etwas von seinen Umtrieben.
 		\item Der Fund des Szepters weckt den Geist von einem von \textbf{Geramboloschs} Vorgängern.
 		Die Erscheinung lockt die Gruppe zu einem zugemauerten Eingang, doch wird dieser aufgebrochen, finden sich dahinter bloß einige seiner Gefolgsleute, die sich untot erheben -- schwerfällige, aber auch schwer gerüstete und furchterregende Gestalten.
@@ -554,10 +552,10 @@ Der reich verzierte, vierbärtige Goldschlüssel passt in das große Schloss des
 
 Die Gruppe ist auf das \textbf{Licht} angewiesen, das sie mitbringt.
 Zwar gibt es in fast allen Räumen Fackelhalter oder sogar Ölschalen, die über ausgeklügelte Rinnen verbunden sind, doch kein Öl dafür.
-Vereinzelt hat sich Phosphorpilz ausgebreitet, so dass \emph{Sternenlicht (Ilaris:38)} herrscht.
+Vereinzelt hat sich Phosphorpilz ausgebreitet, so dass \emph{Sternenlicht (\ilaris{38})} herrscht.
 %Rund um den Feuerschlot ist ab und an ein leichtes Glosen wahrnehmbar. Eine richtige Beleuchtung stellt dieses jedoch nicht dar.
 
-Die gesamte Binge gilt als \emph{enger Raum (Ilaris:38)}.
+Die gesamte Binge gilt als \emph{enger Raum (\ilaris{38})}.
 Die meisten Gänge und viele der Räume haben nur 8 Spann Deckenhöhe.
 Hier sind zwerg- oder wühlschratgroße Kämpfende gegenüber größeren stets \emph{vorteilhaft} positioniert.
 Ausnahmen bilden einige der Werkstätten (für Luftzirkulation) und  Tempelräume (aus repräsentativen Gründen).
@@ -594,8 +592,8 @@ Durch das Herabdrücken der Platte wird eine Bolzenfalle hinter der Wand am  geg
 \begin{center}
 \zeichnung[0.35\textwidth]{Valeria.jpg}
 \end{center}
-Hat jemand in der Gruppe den \emph{Vorteil Zwergennase (Ilaris:30)} oder \emph{Gefahreninstinkt
-(Ilaris:29)} ist eine Probe möglich (ohne diese Vorteile tritt die Wirkung der misslungenen Probe ein):
+Hat jemand in der Gruppe den \emph{Vorteil Zwergennase (\ilaris{30})} oder \emph{Gefahreninstinkt
+(\ilaris{29})} ist eine Probe möglich (ohne diese Vorteile tritt die Wirkung der misslungenen Probe ein):
 
 \spaltenende
 \probenkasten[bild=wahrnehmung,
@@ -604,9 +602,9 @@ zusammenarbeit=nein,
 gruppenprobe=gut,
 vergleichend=nein,
 pw=24,
-erfolg={\vorlesen{Da ihr wisst, wonach ihr sucht, findet ihr bald Platten im Boden der Gangmitte, die ein wenig herausstehen. Vorsichtig übersteigt ihr sie. In der gegenüberliegenden Wand entdeckt ihr schließlich drei in Unebenheiten des Steins versteckte Löcher.}
+erfolg={\vorlesen{Ihr findet bald die Platten im Boden der Gangmitte, die ein wenig herausstehen. Vorsichtig übersteigt ihr sie. In der gegenüberliegenden Wand entdeckt ihr schließlich drei in Unebenheiten des Steins versteckte Löcher.}
 Mit diesem Wissen ist es kein Problem, die Platten zu blockieren oder die Falle gefahrlos auszulösen.},
-misserfolg={Zwei Figuren werden von Bolzen (2W6+4~TP) getroffen. \emph{Verteidigung} gegen diesen \emph{Fernkampfangriff (vgl. Ilaris:47)} ist nur möglich, wenn die Gruppe mit einer Falle rechnet und betont, wie vorsichtig (hinter den Schild geduckt, Schritt für Schritt \dots) sie sich durch den Gang bewegt.},
+misserfolg={Zwei Figuren werden von Bolzen (2W6+4~TP) getroffen. \emph{Verteidigung} gegen diesen \emph{Fernkampfangriff (vgl. \ilaris{47})} ist nur möglich, wenn die Gruppe mit einer Falle rechnet und betont, wie vorsichtig (hinter den Schild geduckt, Schritt für Schritt \dots) sie sich durch den Gang bewegt.},
 ]{Wachsamkeit}{\mbox{} }
 
 \spaltenanfang
@@ -643,10 +641,10 @@ Eine Ecke weiter findet sich dann ein Hebel an der Wand, der den Mechanismus dea
 Einige Truhen wurden wegen ihres schlechten Zustandes einfach zurückgelassen. 
 Sie enthalten jedoch nichts mehr von Wert.
 Daneben gibt es auch noch Felsnischen.
-In einer davon liegt eine seit Jahrhunderten gespannte Bärenfalle \emph{(Ilaris:63)}.
-Wer nach Beute sucht und eine \emph{Sinnenschärfe-Probe (III, 24, -4} durch jede Stufe \emph{Angepasst (Dunkelheit)}) misslingt, schnappt die Falle zu und Wundfieber (\emph{Ilaris:35}) droht.
+In einer davon liegt eine seit Jahrhunderten gespannte Bärenfalle (\ilaris{63}).
+Wer nach Beute sucht und eine \emph{Sinnenschärfe-Probe (III, 24, -4} durch jede Stufe \emph{Angepasst (Dunkelheit)}) misslingt, schnappt die Falle zu und Wundfieber (\ilaris{35}) droht.
 
-Anschließend oder bei gelungener Probe wird ein verzauberter \textbf{Asthenil}-Ring gefunden (\emph{Ilaris:78}: \emph{ladungsbasiert, aufladbar}, eine Ladung, \biglittlecap{Elementarbann} mit \emph{Modifikation Gegenzauber} (\emph{Ilaris:126}), \emph{Erfolgswert} 20).
+Anschließend oder bei gelungener Probe wird ein verzauberter \textbf{Asthenil}-Ring gefunden (\ilaris{78}: \emph{ladungsbasiert, aufladbar}, eine Ladung, \biglittlecap{Elementarbann} mit \emph{Modifikation Gegenzauber} (\ilaris{126}), \emph{Erfolgswert} 20).
 Das Artefakt hat einen wahrlich komplexen Auslöser:
 Sobald ein Feuerzauber gegen die tragende Person gesprochen wird, wirkt der Gegenzauber.
 
@@ -656,7 +654,7 @@ Nur an Spuren von Ruß und Abfällen lassen sich zuordnen, welche Höhlen für w
 Einige einfache Werkzeuge wie Ketten, Hammer und Brechstangen wurden zurückgelassen, die verschleißbedingt die hohen Ansprüche der Kinder Angroschs nicht mehr erfüllten. Sie können aber durchaus noch benutzt werden, falls die Gruppe einen entsprechenden Bedarf haben sollte.
 
 Etwas mehr Ausrüstung wurde einer ehemaligen Eisenhütte zurückgelassen, in der einst alchimistische Experimente durchgeführt wurden, die das \fkv bei seinem Auszug schon aufgegeben hatte.
-Sie wäre als \emph{archaisches Labor} (\emph{Ilaris:64}) benutzbar.
+Sie wäre als \emph{archaisches Labor} (\ilaris{64}) benutzbar.
 Auch einige seltene mineralische und metallische Zutaten lassen sich mit etwas Mühe (und \textbf{Rogolan} (Schrift) III) finden.
 
 \subsubsection{Verlassene Wohnhöhlen}
@@ -742,7 +740,7 @@ misserfolg={}
 Es muss sich um \textbf{Rattengold} handeln, eines der sogenannten 13 Unmetalle.\\
 	\textbf{20:} Rattengold wird dem \textbf{Namenlosen} zugeordnet. Es heißt, dass Gefolgsleute dieses Gottes nicht mit dem hohen Gewicht zu kämpfen haben.\\
 	\textbf{24:} Wegen seiner Affinität zum Namenlosen ist Besitz und Verarbeitung in zwölfgöttertreuen Landen verboten -- soweit überhaupt bekannt.\\
-	\textbf{28:} Rattengold lässt sich für einige \textbf{Alchemika} verwenden, beispielsweise als potentes Substitut für Gold und Bernstein im \textbf{Bannstaub} \emph{(Ilaris:64)} oder für Zinnober im \textbf{Purpurblitz} (\emph{Ilaris:66}).\\
+	\textbf{28:} Rattengold lässt sich für einige \textbf{Alchemika} verwenden, beispielsweise als potentes Substitut für Gold und Bernstein im \textbf{Bannstaub} (\ilaris{64}) oder für Zinnober im \textbf{Purpurblitz} (\ilaris{66}).\\
 	\textbf{32:} Es heißt, dass der \textbf{Kaisertöter} -- eine mythische Klinge, mit der der Kult des Namenlosen Herrscherhäuser stürzt -- aus Rattengold geschmiedet wird.}
 \spaltenanfang
 
@@ -777,7 +775,7 @@ Das von den Schraten durchbissene Gleis sorgt schließlich für ein schepperndes
 Bei Angriffen mit Waffengewalt oder Licht ziehen sie sich sofort zurück. Je nach Erfolg werden sie für eine Weile eingeschüchtert.
 Zu regelrechten Kämpfen dürfte es nur kommen, wenn die Gruppe beschließt, eine Falle zu stellen.
 
-Neben der \textbf{Bärenfalle} (\emph{Ilaris:63}) sollten Sie auch kreativere Lösungen ermöglichen und belohnen.
+Neben der \textbf{Bärenfalle} (\ilaris{63}) sollten Sie auch kreativere Lösungen ermöglichen und belohnen.
 Beachten Sie aber, dass eine solche Falle nur bewacht funktionieren kann:
 Selbst ein Käfig aus Stein oder Metall stellt für das Gebiss eines Wühlschrats kein Hindernis dar und wäre in ein bis zwei Initiativephasen zerkaut.
 
@@ -799,8 +797,8 @@ Selbst ein Käfig aus Stein oder Metall stellt für das Gebiss eines Wühlschrat
 \vorlesen{Als ihr die nächste Höhle betretet, entdeckt ihr an deren anderen Ende auf den ersten Blick das Ziel eurer Suche.
 Von dem dreiflügligen Portal trennt euch eine breite Schlucht.
 Zwar wölbt sich die mit vereinzelten Stalaktiten behangene Decke lediglich einige Schritt über euch. Jedoch geht es mindestes fünfundzwanzig Schritt in die Tiefe.
-Dort wälzt sich träge das graue Magma; immer wieder platzt rot glühend eine Blase und schickt einige leuchtende orangenen Tropfen in die Höhe. Deswegen herrscht hier \emph{Mondlicht} (Ilaris:46).
-Die wabernde Hitze (\emph{Kh\^omglut, Ilaris:35}) treibt euch den Schweiß aus den Poren.
+Dort wälzt sich träge das graue Magma; immer wieder platzt rot glühend eine Blase und schickt einige leuchtende orangenen Tropfen in die Höhe. Deswegen herrscht hier \emph{Mondlicht} (\ilaris{46}).
+Die wabernde Hitze (\emph{Kh\^omglut, \ilaris{35}}) treibt euch den Schweiß aus den Poren.
 
 	Der einzige Weg auf die andere Seite ist ein schmaler, gekrümmter Rücken, anscheinend aus reinem Obsidian.
 Die obere Kante verjüngt sich von etwa zwei Schritt zur Mitte hin auf einen knappen Schritt.
@@ -851,14 +849,14 @@ erfolg={Die Anordnung der Paneele erinnert an die Runen hinter dem \textbf{Angro
 	\textbf{24:} Eine ununterbrochene Verbindung zwischen zwei Ambossen erfordert jeweils eine bestimmte Kombination. Diese entspricht einer der Platten am Altar und bezeichnet somit einen Buchstaben.\\
 	\textbf{28:} Die richtige Reihenfolge wird durch den Namen Angroschs vorgegeben. Es ergeben sich: NG-Band: D, R-Band: G, SCH-Band: M.},
 misserfolg={Wird der Hebel gezogen, während eine falsche Kombination eingestellt ist, klappt die Brücke weg und die Person am Hebel stürzt unweigerlich in die Tiefe.
-	Dies könnte leicht den Tod im Magma bedeuten, so dass sich glücklich schätzen muss, wen scharfkantige Obsidianfelsen aufhalten.
-	4W6+4 \emph{Sturz}schaden verursachen diese dennoch; nach einer \emph{Akrobatik-Probe} (16) die Hälfte (\emph{Ilaris:34}).
+	Dies könnte leicht den Tod im Magma bedeuten, so dass sie sich glücklich schätzen muss, wenn scharfkantige Obsidianfelsen sie aufhalten.
+	4W6+4 \emph{Sturz}schaden verursachen diese dennoch; nach einer \emph{Akrobatik-Probe} (16) die Hälfte (\ilaris{34}).
 	Ist die stürzende Figur mit einem Seil gesichert, würfelt die haltende Figur
 	\probe{Koerperkraft}{Körperkraft (24)}{%
 		\emph{Zusammenarbeit mit 1 Person möglich}\\
 		Bei Erfolg bleibt der Sturz ohne schmerzhafte Folgen.
 		Bei Misserfolg rutscht auch die haltende Person auf dem glatten Grat aus und beide stürzen.}
-	Das Seil erleidet an den scharfen Kanten in jedem Fall 2W6~SP (\emph{Ilaris:32}) bei jedem Sturz.},
+	Das Seil erleidet bei jedem Sturz 2W6~SP.},
 ]
 {Klugheit}{\mbox}
 
@@ -880,7 +878,7 @@ In den Nischen darunter liegen jedoch nur Werkzeug und Waffen. Die Körper wurde
 
 Dieser \textbf{Schlot} kommt in Sicht, als ihr die Statue umrundet. Doch das feurige Glosen aus der Tiefe wird durch eine weitgehend transparente, wabernde Masse verzerrt.}
 
-Eine \link{https://ilaris-online.de/app/kreatur/175}{Riesenamöbe} (\emph{Ilaris:105}) muss durch ein von den Wühlschraten gegrabenes Loch ihren Weg in die Gruft gefunden haben.
+Eine \link{https://ilaris-online.de/app/kreatur/175}{Riesenamöbe} (\ilaris{105}) muss durch ein von den Wühlschraten gegrabenes Loch ihren Weg in die Gruft gefunden haben.
 Zu den Dingen, die sie sich hier einverleibt hat, gehört ausgerechnet das Szepter!
 \kreaturriesenamoebe
 
@@ -890,9 +888,7 @@ Zu den Dingen, die sie sich hier einverleibt hat, gehört ausgerechnet das Szept
 Nach dem Kampf kann die Gruppe das Szepter bergen. Es besteht hauptsächlich aus \textbf{Asthenil}, mit Applikationen aus \textbf{Toschkril} und \textbf{Zwergengold}.
 Ein großer \textbf{Serpentin} ist an zentraler Stelle eingebettet.
 \\
-Auch einige Waffen und Werkzeuge finden sich in den amorphen Überresten der Amöbe. Diese sind natürlich von hervorragender Qualität (3xHQ und mehr, \emph{gutes Werkzeug} (\emph{Ilaris:61})), waren hier aber eigentlich zur ewigen Ruhe gebettet. Etwas mitzunehmen könnten Angrosch und auch Boron als Frevel auffassen \dots
-
-\neuespalte
+Auch einige Waffen und Werkzeuge finden sich in den amorphen Überresten der Amöbe. Diese sind natürlich von hervorragender Qualität (3xHQ und mehr, \emph{gutes Werkzeug} (\ilaris{61})), waren hier aber eigentlich zur ewigen Ruhe gebettet. Etwas mitzunehmen könnten Angrosch und auch Boron als Frevel auffassen \dots
 
 \subsubsection{Immer diese Schrate!}
 \begin{center}
@@ -951,7 +947,7 @@ Der Inradon, den Serpentin in Händen, leitet sie zum großen Altar-Amboss. Dana
 Genaueres Hinsehen zeigt, dass an Bonderiks Ärmel ein Knopf fehlt. Sobald sich ein Gruppenmitglied bemerkbar macht, erfasst Unruhe die Mitbetenden und setzt sich in der Menge fort, auch wenn die Ursache von den Wenigsten verstanden wird. \textbf{Xermosch} unterbricht das Ritual, um die Details zu erfragen.
 \textbf{Bonderik} gerät nicht aus der Ruhe, tritt aber den Rückzug an.
 
-Nun kann eine \emph{Verfolgungsjagd} (\emph{Ilaris:57}, DG\,3) beginnen:\\
+Nun kann eine \emph{Verfolgungsjagd} (\ilaris{57}, DG\,3) beginnen:\\
 In der dicht stehenden Menge ist die Grund-GS 1. \emph{Laufen} wäre \emph{langsam}.
 Bonderik drängelt sich also durch die Menge und probt auf \emph{Körperkraft}, PW\,12, um \emph{schnell} voranzukommen. Er versucht, in die Hallen seiner Sippe zu gelangen und den verräterischen Rock loszuwerden.
 
@@ -984,7 +980,7 @@ Und auch der Weg über den \textbf{N\^orrnstieg} nach \textbf{Nordhag} fällt Ka
 
 Somit gibt es in Finsterkoppen schlechterdings kein Gebäude, das auf menschliche Maße ausgerichtet und keine Höhle, die für Menschen auskömmlich ausgeleuchtet wäre.
 
-Selbst in prunkvollen Räumen wie der Versammlungshalle oder dem Angroschtempel herrscht \emph{Dämmerung} (\emph{Ilaris:38}).
+Selbst in prunkvollen Räumen wie der Versammlungshalle oder dem Angroschtempel herrscht \emph{Dämmerung} (\ilaris{38}).
 Überall kann eine herabhängende Leuchte, ein Durchgang oder ein Sitzmöbel zum Hindernis für jemanden von mehr als sieben Spann Körpergröße werden.
 
 \subsubsection{Das große Tor}
@@ -1086,7 +1082,7 @@ Arglescha eignet sich hervorragend als romantisches Interesse für einen Zwergen
 %\paragraph{Jasinthe, Garether Gelehrte}
 %\paragraph{Odir Sensendengler, Abenteurer und Pferdedieb}
 \subsection{Szenen/Eigenheiten-Tabelle}
-Hier eine Übersichts-Tabelle, mit welchen Eigenheiten Sie den Figuren in welcher Szene \emph{das Leben schwer machen} \emph{(Ilaris:15)} können, um Schicksalspunkte zu verteilen:
+Hier eine Übersichts-Tabelle, mit welchen Eigenheiten Sie den Figuren in welcher Szene \emph{das Leben schwer machen} (\ilaris{15}) können, um Schicksalspunkte zu verteilen:
 
 \begin{tabularx}{0.98\linewidth}{l|XXX}
 	&\tkopf{Der Tiefe Rat} & \tkopf{Die Finsterkopp-Binge}&\tkopf{Das Szepter}\\
